--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
 
 <h2>My Favorite Hobbies</h2>
 <ul>
-    <li>Reading</li>
+    <li>Reading</li> <br>
+    <img 
+    src="https://media1.tenor.com/m/I-JIzkrC4U4AAAAC/hello-kitty-reading.gif"
+    alt="Hello Kitty Reading"
+    >
     <li>Going to the gym</li> <br>
     <img 
     src="https://media.tenor.com/cZplm9ukCgkAAAAj/hello-kitty-gym-workout.gif"
     alt="Hello Kitty Lifting Weights"
     >
-    <li>Playing video games</li>
+    <li>Playing video games</li> <br>
+    <img 
+    src="https://media1.tenor.com/m/YTuyGFWIKQYAAAAC/pusheen-pusheen-the-cat.gif"
+    alt="Hello Kitty Playing Video Games"
+    >
 </ul>
 
 <hr>
